--- a/src/app/shared/comment/comment.component.html
+++ b/src/app/shared/comment/comment.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let comment of comments">
+<div id="main-container">
+  <div *ngFor="let comment of comments">
   <div class="card-body border-top-xs pt-4 pb-3 pe-4 d-block ps-5">
     <div class="row">
       <figure class="avatar position-absolute left-0 ms-2 mt-1 col-1">
@@ -15,21 +16,84 @@
           <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-50">{{comment.duration}}</span>
       </div>
       <div class="col-1">
-        <i class="ti-more-alt float-right text-grey-800 font-xsss"></i>
+        <a *ngIf="comment.username === currentUser?.username" class="ms-auto" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="ti-more-alt text-grey-900 btn-round-md bg-greylight font-xss"></i></a>
+        <div class="dropdown-menu dropdown-menu-end p-4 rounded-xxl border-0 shadow-lg" aria-labelledby="dropdownMenu">
+          <div class="card-body p-0 d-flex">
+            <i class="feather-bookmark text-grey-500 me-3 font-lg"></i>
+            <a (click)="openModal('edit', comment)" type="button" class="fw-600 text-grey-900 font-xssss mt-0 me-4">Edit Comment</a>
+          </div>
+          <div class="card-body p-0 d-flex mt-2">
+            <i class="feather-alert-circle text-grey-500 me-3 font-lg"></i>
+            <a (click)="openModal('delete', comment)" type="button" class="fw-600 text-grey-900 font-xssss mt-0 me-4">Delete Comment</a>
+          </div>
+        </div>
       </div>
     </div>
-
     <app-emotion-comment [comment]="comment"></app-emotion-comment>
   </div>
 </div>
+</div>
+
+<!-------------------------------create comment----------------------------->
 <div class="card-body p-0 mt-3 position-relative">
-  <figure class="avatar position-absolute ms-2 mt-1 top-5"><img [src]="currentUser?.avatar" alt="image"
-                                                                class="shadow-sm rounded-circle w30 h30"></figure>
-  <form [formGroup]="commentForm" (ngSubmit)="createComment()">
-    <input [formControlName]="'text'" name="message"
+  <figure class="avatar position-absolute ms-2 mt-1 top-5">
+    <img [src]="currentUser?.avatar" alt="image" class="shadow-sm rounded-circle w30 h30"></figure>
+  <form [formGroup]="addCommentForm" (ngSubmit)="createComment()">
+    <input formControlName="text" name="message"
            class=" bor-0 w-100 rounded-xxl p-2 ps-5 font-xssss text-grey-500 fw-500 border-light-md theme-dark-bg"
-           placeholder="comment................"/>
+           placeholder="Write a comment..."/>
   </form>
+</div>
+
+<!-------------------------------edit comment----------------------------->
+<div class="modal fade" id="editCommentModal" tabindex="-1" role="dialog" aria-labelledby="commentEditModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="card-body p-0 mt-3 position-relative">
+            <figure class="avatar position-absolute ms-2 mt-1 top-5">
+              <img [src]="currentUser?.avatar" alt="image" class="shadow-sm rounded-circle w30 h30"></figure>
+            <form [formGroup]="editCommentForm" (ngSubmit)="updateComment()" id="editCommentForm">
+              <input type="hidden" formControlName="id">
+              <input formControlName="text" type="text"
+                     class=" bor-0 w-100 rounded-xxl p-2 ps-5 font-xssss text-grey-500 fw-500 border-light-md theme-dark-bg"/>
+              <input type="hidden" formControlName="likeCount">
+              <input type="hidden" formControlName="heartCount">
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="close-edit-btn" data-bs-dismiss="modal" class="btn btn-secondary">Close</button>
+            <button type="submit" data-dismiss="modal" class="btn btn-primary" form="editCommentForm">Update</button>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-------------------------------delete comment----------------------------->
+<div class="modal fade" id="deleteCommentModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete comment?</p>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="close-delete-btn">No</button>
+          <button (click)="deleteComment()" class="btn btn-danger" data-dismiss="modal">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
