--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,39 +18,9 @@
           </div>
 
           <div class="row ps-2 pe-2">
-            <div *ngFor="let user of userActivated" class="col-md-3 col-sm-4 pe-2 ps-2">
-              <app-member [userActivated]="user" (eventEmitter)="event()"></app-member>
+            <div *ngFor="let user of users" class="col-md-3 col-sm-4 pe-2 ps-2">
+              <app-member [user]="user" (eventEmitter)="event()"></app-member>
             </div>
-<!--            <div class="row ps-2 pe-2">-->
-<!--            <div *ngFor="let user of userBlocked" class="col-md-3 col-sm-4 pe-2 ps-2">-->
-<!--              <app-member [userBlocked]="user" (eventEmitter)="event()"></app-member>-->
-<!--            </div>-->
-
-<!--            <div class="col-md-3 col-sm-4 pe-2 ps-2" *ngFor="let user of userActivated">-->
-<!--              <div class="card d-block border-0 shadow-xss rounded-3 overflow-hidden mb-3">-->
-<!--                <div class="card-body d-block w-100 ps-3 pe-3 pb-4 text-center">-->
-<!--                  <figure class="avatar ms-auto me-auto mb-0 position-relative w65 z-index-1"><img src="{{user.avatar}}" alt="image" class="float-right p-0 bg-white rounded-circle w-100 shadow-xss"></figure>-->
-<!--                  <div class="clearfix"></div>-->
-<!--                  <h4 class="fw-700 font-xsss mt-3 mb-1">{{user.firstName  +' '+ user.lastName}}</h4>-->
-<!--                  <p class="fw-500 font-xsssss text-grey-500 mt-0 mb-3">{{user.email}}</p>-->
-<!--                  <div type="button" class="mt-0 btn pt-2 pb-2 ps-3 pe-3 lh-24 ms-1 ls-3 d-inline-block rounded-xl bg-warning font-xsssss fw-700 ls-lg text-white">Block</div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-
-
-            <div class="col-md-3 col-sm-4 pe-2 ps-2">
-              <div class="card d-block border-0 shadow-xss rounded-3 overflow-hidden mb-3">
-                <div class="card-body d-block w-100 ps-3 pe-3 pb-4 text-center">
-                  <figure class="avatar ms-auto me-auto mb-0 position-relative w65 z-index-1"><img src="https://via.placeholder.com/50x50.png" alt="image" class="float-right p-0 bg-white rounded-circle w-100 shadow-xss"></figure>
-                  <div class="clearfix"></div>
-                  <h4 class="fw-700 font-xsss mt-3 mb-1">Goria Coast </h4>
-                  <p class="fw-500 font-xsssss text-grey-500 mt-0 mb-3">@macale343</p>
-                  <a href="#" class="mt-0 btn pt-2 pb-2 ps-3 pe-3 lh-24 ms-1 ls-3 d-inline-block rounded-xl bg-danger font-xsssss fw-700 ls-lg text-white">FRIEND</a>
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
       </div>
