--- a/src/app/user/user-header/user-header.component.html
+++ b/src/app/user/user-header/user-header.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
   <div class="card w-100 border-0 p-0 bg-white shadow-xss rounded-xxl">
-    <div class="card-body h250 p-0 rounded-xxl overflow-hidden m-3"><img src="https://via.placeholder.com/960x250.png"
+    <div class="card-body h250 p-0 rounded-xxl overflow-hidden m-3"><img src="https://img.wallpapersafari.com/desktop/1024/576/47/40/e8CiPB.jpg"
                                                                          alt="image"></div>
     <div class="card-body p-0 position-relative">
       <figure class="avatar position-absolute w100 h100 z-index-1" style="top:-40px; left: 30px;" data-lightbox="roadtrip"><img
